@startuml

title __LEARNINGALGORITHMS's Class Diagram__\n

  namespace neuralNetwork {
    namespace learningAlgorithms {
      class neuralNetwork.learningAlgorithms.Backpropagation {
          + runAlgorithm()
          - calculateOutputs()
          - changeWeights()
          - findDeltas()
          - updateSSE()
      }
    }
  }
  

  namespace neuralNetwork {
    namespace learningAlgorithms {
      interface neuralNetwork.learningAlgorithms.LearningAlgorithm {
          {static} + serialversionUID : long
          {abstract} + runAlgorithm()
      }
    }
  }
  

  neuralNetwork.learningAlgorithms.Backpropagation .up.|> neuralNetwork.learningAlgorithms.LearningAlgorithm
  neuralNetwork.learningAlgorithms.Backpropagation o-- data.Dataset : data
  neuralNetwork.learningAlgorithms.Backpropagation o-- neuralNetwork.Network : network


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
